--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
         <a class="nav-link" href='/index.html'>Home</a>
         <a class="nav-link" href='/map.html'>Map</a>
         <a class="nav-link" href='/stories.html'>Featured Stories</a>
-        <a class="nav-link active" href='/contatc.html'>Contact</a>
+        <a class="nav-link active" href='/contact.html'>Contact</a>
       </nav>
     </div>    
   </header>
