--- a/map.html
+++ b/map.html
@@ -49,7 +49,7 @@
         <a class="nav-link" href='/index.html'>Home</a>
         <a class="nav-link active" href='/map.html'>Map</a>
         <a class="nav-link" href='/stories.html'>Featured Stories</a>
-        <a class="nav-link" href='/contatc.html'>Contact</a>
+        <a class="nav-link" href='/contact.html'>Contact</a>
       </nav>
     </div>
   </header>
