--- a/stories.html
+++ b/stories.html
@@ -83,8 +83,8 @@
 
 
       <nav class="blog-pagination">
-        <a class="btn btn-outline-primary" href="#">Previous</a>
-        <a class="btn btn-outline-secondary disabled" href="#" tabindex="-1" aria-disabled="true">Next</a>
+        <a class="btn btn-secondary" href="#">Previous</a>
+        <a class="btn btn-secondary" href="#" tabindex="-1" aria-disabled="true">Next</a>
       </nav>
 
     </div><!-- /.blog-main -->
