--- a/Index.html
+++ b/Index.html
@@ -43,10 +43,10 @@
     <div class="inner">
       <h3 class="masthead-brand">Collective Memories</h3>
       <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href='19Project/index.html'>Home</a>
+        <a class="nav-link active" href='https://sz9na.github.io/collectivememories/Index.html'>Home</a>
         <a class="nav-link" href='https://sz9na.github.io/collectivememories/map.html'>Map</a>
-        <a class="nav-link" href='19Project/stories.html'>Featured Stories</a>
-        <a class="nav-link" href='19Project/contact.html'>Contact</a>
+        <a class="nav-link" href='https://sz9na.github.io/collectivememories/stories.html'>Featured Stories</a>
+        <a class="nav-link" href='https://sz9na.github.io/collectivememories/contact.html'>Contact</a>
       </nav>
     </div>
   </header>
@@ -57,7 +57,7 @@
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
 <div id="subtitle" class="align-text-bottom">
     <h3>This website documents memories at risk of climate change</h3>
-    <p><a class="btn btn-lg btn-forth" href="/map.html" role="button">Enter Map</a></p>
+    <p><a class="btn btn-lg btn-forth" href="href='https://sz9na.github.io/collectivememories/map.html'" role="button">Enter Map</a></p>
 </div>
     <div class="carousel-inner">
      
