--- a/contact.html
+++ b/contact.html
@@ -43,10 +43,10 @@
     <div class="inner">
       <h3 class="masthead-brand">Collective Memories</h3>
       <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link" href='/index.html'>Home</a>
-        <a class="nav-link" href='/map.html'>Map</a>
-        <a class="nav-link" href='/stories.html'>Featured Stories</a>
-        <a class="nav-link active" href='/contact.html'>Contact</a>
+            <a class="nav-link" href='https://sz9na.github.io/collectivememories/Index.html'>Home</a>
+            <a class="nav-link" href='https://sz9na.github.io/collectivememories/map.html'>Map</a>
+            <a class="nav-link" href='https://sz9na.github.io/collectivememories/stories.html'>Featured Stories</a>
+            <a class="nav-link active" href='https://sz9na.github.io/collectivememories/contact.html'>Contact</a>
       </nav>
     </div>    
   </header>
