--- a/Index.html
+++ b/Index.html
@@ -57,7 +57,7 @@
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
 <div id="subtitle" class="align-text-bottom">
     <h3>This website documents memories at risk of climate change</h3>
-    <p><a class="btn btn-lg btn-forth" href="href='https://sz9na.github.io/collectivememories/map.html'" role="button">Enter Map</a></p>
+    <p><a class="btn btn-lg btn-forth" href='https://sz9na.github.io/collectivememories/map.html' role="button">Enter Map</a></p>
 </div>
     <div class="carousel-inner">
      
